<resources>
    <string name="app_name">DocBook</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up"</string>
    <string name="login_header">Welcome Back</string>
    <string name="signup_header">Create Your Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="no_account"><u>I don\'t have an account yet</u></string>
    <string name="proceed_login"><u>Proceed to Login</u></string>
    <string name="logout"><b>Logout</b></string>
    <string name="apt">Book Appointment</string>
    <string name="profile">Doctor Profile Image"</string>

</resources>